task15/k8s/ingress.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-svc
spec:
  hosts:
  - '*'
  gateways:
    - ingressgateway
  http:
  - route:
    - destination:
        host: go-web
        port:
          number: 80
      weight: 70
      headers:
        response:
          add:
            x-trv-heritage: go-web
    - destination:
        host: java-web
        port:
          number: 80
      weight: 30
      headers:
        response:
          add:
            x-trv-heritage: java-web
